add structure readme

--- a/main-server/.gitignore
+++ b/main-server/.gitignore
@@ -4,5 +4,23 @@
 # Ignore Gradle build output directory
 build
 
-
+# Ignore .env 
 .env 
+
+
+
+
+# Ignore tech-trash
+.project 
+.settings/
+bin/
+.classpath
+gradle/
+
+
+# media folder 
+uploads/*
+
+
+
+
