--- a/main-server/build.gradle
+++ b/main-server/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
 
     id("com.gradleup.shadow") version "9.3.1"
+    id("org.flywaydb.flyway") version "12.0.1"
 }
 
 
@@ -24,6 +25,8 @@ application {
 def vertxVersion = "4.5.4"
 
 dependencies {
+  implementation "io.vertx:vertx-config:$vertxVersion"
+
   implementation "io.vertx:vertx-core:$vertxVersion"
   
   implementation "io.vertx:vertx-web:$vertxVersion"
@@ -31,7 +34,18 @@ dependencies {
   implementation "io.vertx:vertx-json-schema:$vertxVersion"
 
   implementation "ch.qos.logback:logback-classic:1.5.0"
+
+  implementation "io.vertx:vertx-pg-client:$vertxVersion"
+
+  implementation "io.vertx:vertx-mongo-client:$vertxVersion"
+  
+  implementation 'com.ongres.scram:client:2.1'
+
+  implementation "org.flywaydb:flyway-database-postgresql:12.0.1"
+  
+  implementation 'org.postgresql:postgresql:42.6.0'
 }
+
 
 
 shadowJar{
